# mini-pandas

./: README.md  TODO-steps  TODO-steps.md  Test Notebook.ipynb  environment.yaml  pyproject.toml  requirements.txt  tox.ini
mini_pandas/: __init__.py  constants.py  dataframe.py  pandas_api.py  str_utils.py
pandas_cub/: __init__.py  dataframe.py  utils.py
pandas_cub_final/: __init__.py
tests/: __init__.py  test_aggregation.py  test_creation.py  test_dataframe.py  test_grouping.py  test_non_aggregating_methods.py  test_operators.py  test_read_csv.py  test_selection.py  test_sort_sample.py  test_strings.py
tests/utils/: assert_utils.py
